--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "typescript": "^5.3.2"
   },
   "dependencies": {
+    "@types/ramda": "^0.29.9",
+    "ramda": "^0.29.1",
     "ts-node": "^10.9.1"
   }
 }
